static/styles.css
/************************************ Tag Selectors **************************/
body {
  margin: 0;
  text-align: center;
  font-family: 'Merriweather', serif;
}

h1 {
  font-size: 562.5%;
  line-height: 2;
  margin-top: 50;
  font-family: 'Sacramento', cursive;
  color: #66BFBF;
}

h2 {
  font-family: 'Montserrat', sans-serif;
  font-size: 2.5rem;
  color: #66BFBF;
}

h3 {
  font-family: 'Montserrat', sans-serif;
  color: #11999E;
}



hr {
  margin-top: 100px;
  margin-bottom: 100px;
  border-color: gray;
  border-style: dotted;
  border-width: 5px;
  border-bottom: none;
  width: 5%;
}

a {
  color: #11999E;
  font-family: 'Montserrat', sans-serif;
  margin: 10px 20px;
  text-decoration: none;
}

a:hover {
  color: #EAF6F6;
}
/************************************ Class Selectors **************************/
.sub-title {
  font-weight: normal;
}
.top-container {
  position: relative;
  padding-top: 100px;
  background-color: #E4F9F5;
}

.bottom-container {
  background-color: #66BFBF;
  margin-top: 100px;
  padding: 50px 0 20px;
}

.profile {
  width: 40%;
  margin: auto;
}

.skill-row {
  width: 50%;
  margin: 100px auto;
  text-align: left;
  line-height: 2;
}

.diamond {
  width: 25%;
  float: left;
  margin-right: 30px;
}

.launch {
  width: 25%;
  float: right;
  margin-left: 30px;
}

.bottom-cloud {
  position: absolute;
}

.top-cloud {
  position: relative;
  margin-left: 350px;
}

.contact-blurb {
  width: 40%;
  margin: 40px auto 60px;
}

.btn {
  background: #11cdd4;
  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
  -webkit-border-radius: 8;
  -moz-border-radius: 8;
  border-radius: 8px;
    font-family: 'Montserrat', sans-serif;
  color: #ffffff;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
}

.btn:hover {
  background: #30e3cb;
  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
  text-decoration: none;
}

.copyright {
  color: #EAF6F6;
  font-size: .75rem;
  padding: 20px 0;
}




/************************************ Id Selectors **************************/

